# NearID

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yaml  index.html  pyproject.toml
docs/: EVALUATION.md  TRAINING.md
evaluation/: gen_tables.py  inference.py  metrics.py  sim_test.py  table_utils.py
examples/: batch_inference.py  pairwise_similarity.py  quickstart.py
nearid/: __init__.py  configuration_nearid.py  modeling_nearid.py
scripts/: eval_example.sh  train_example.sh  upload_nearid_datasets.py
scripts/dataset_cards/: NearID_README.md
training/: config.py  convert_checkpoint.py  evaluator.py  losses.py  models.py  train.py
training/data/: mtg_dataset.py  nearid_dataset.py
